kubernetes-labs/lab-03/lab-03-simple.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iti
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: iti
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: iti
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - name: http
      port: 5000
      targetPort: 80
---
apiVersion: v1
kind: Namespace
metadata:
  name: iti-45
---
apiVersion: v1
kind: Namespace
metadata:
  name: world
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: africa
  namespace: world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: africa
  template:
    metadata:
      labels:
        app: africa
    spec:
      containers:
        - name: africa
          image: husseingalal/africa:latest
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: europe
  namespace: world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: europe
  template:
    metadata:
      labels:
        app: europe
    spec:
      containers:
        - name: europe
          image: husseingalal/europe:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: africa
  namespace: world
spec:
  selector:
    app: africa
  ports:
    - port: 8888
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: europe
  namespace: world
spec:
  selector:
    app: europe
  ports:
    - port: 8888
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: world
  namespace: world
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: world-world-strip-prefix@kubernetescrd
spec:
  rules:
    - host: world.universe.mine
      http:
        paths:
          - path: /europe
            pathType: Prefix
            backend:
              service:
                name: europe
                port:
                  number: 8888
          - path: /africa
            pathType: Prefix
            backend:
              service:
                name: africa
                port:
                  number: 8888
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: world-strip-prefix
  namespace: world
spec:
  stripPrefix:
    prefixes:
      - /europe
      - /africa
