kubernetes-labs/lab-03/world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: world
  namespace: world
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: world-world-strip-prefix@kubernetescrd
spec:
  rules:
  - host: world.universe.mine
    http:
      paths:
      - path: /europe
        pathType: Prefix
        backend:
          service:
            name: europe
            port:
              number: 8888
      - path: /africa
        pathType: Prefix
        backend:
          service:
            name: africa
            port:
              number: 8888

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: world-strip-prefix
  namespace: world
spec:
  stripPrefix:
    prefixes:
      - /europe
      - /africa
